--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -41,3 +41,8 @@
     margin-left: auto;
     margin-right: 0;
 }
+
+#battle-screen-selection-switching {
+    display: flex;
+    justify-content: center;
+}
