--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -46,3 +46,37 @@
     display: flex;
     justify-content: center;
 }
+
+#battle-screen-selection-ability {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#battle-screen-selection-abilities-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player-ability {
+    margin: 20px 60px;
+    height: 80px;
+    width: 220px;
+    font-size: 25px;
+    font-family: 'Courier New', Courier, monospace;
+    display: block;
+    text-transform: uppercase;
+    background-color: green;
+    border: none;
+    transition-duration: 0.5s;
+}
+
+.player-ability:hover {
+    background-color: greenyellow; 
+    transition-duration: 0.5s;
+}
+
+.selected {
+    background-color: gold !important;
+}
