--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -5,5 +5,11 @@
 }
 
 #summary-text {
+    font-size: 45px;
+}
+
+.battle-screen-player-summary {
     font-size: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
