--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -80,3 +80,14 @@
 .selected {
     background-color: gold !important;
 }
+
+.battle-screen-selection-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.selection-body-title {
+    font-size: 25px;
+}
