Lose and win screens style

--- a/css/loseScreen.css
+++ b/css/loseScreen.css
@@ -17,4 +17,9 @@
 
 #lose-screen-message {
     font-size: 40px;
+    color: red;
+}
+
+#lose-screen > .switch-button {
+    background-color: red;
 }
