--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,12 @@ body {
     background-color: greenyellow; 
     transition-duration: 0.1s;
 }
+
+@media(max-height: 650px) {
+    .switch-button {
+        margin: 15px 45px;
+        height: 56px;
+        width: 154px;
+        font-size: 20px;
+    }
+}
