--- a/css/startScreenStyle.css
+++ b/css/startScreenStyle.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
 }
 
