--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+    height: -webkit-fill-available;
+}
+
 body {
     background-color: black;
     font-family: 'Courier New', Courier, monospace;
