--- a/css/drawScreen.css
+++ b/css/drawScreen.css
@@ -19,3 +19,10 @@
     margin-left: 30px;
     margin-right: 30px;
 }
+
+@media (max-width: 600px) {
+    #lose-screen-loser-portrait {
+        max-width: 200px;
+        max-height: 200px;
+    }
+}
