--- a/css/drawScreen.css
+++ b/css/drawScreen.css
@@ -14,8 +14,8 @@
 
 .draw-screen-player-portrait {
     display: block;
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 400px;
     margin-left: 30px;
     margin-right: 30px;
 }
@@ -24,5 +24,8 @@
     #lose-screen-loser-portrait {
         max-width: 200px;
         max-height: 200px;
+    }
+    #draw-screen {
+        font-size: 30px;
     }
 }
