--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -29,6 +29,16 @@
     height: 200px;
 }
 
+.player-hp-amount {
+    background-color: gray;
+    width: 100%;
+}
+
+.player-hp-amount {
+    background-color: red;
+    width: 50%;
+}
+
 #player-right > .player-portrait {
     margin-left: auto;
     margin-right: 0;
