--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -40,23 +40,28 @@
     margin: 5px 10px;
     background-color: gray;
     width: 100%;
+    height: 20px;
 }
 
 .player-hp-amount {
     background-color: rgb(38, 128, 38);
     width: 100%;
+    height: 20px;
 }
 
 .player-mana-bar {
     margin: 5px 10px;
     background-color: gray;
     width: 100%;
+    height: 20px;
 }
 
 .player-mana-amount {
     background-color: rgb(134, 37, 134);
     width: 100%;
+    height: 20px;
 }
+
 
 #player-right > .player-portrait {
     margin-left: auto;
