--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -113,6 +113,10 @@
     text-align: center;
 }
 
+.battle-screen-player-summary {
+    text-align: center;
+}
+
 #battle-screen-selection-switching {
     display: flex;
     justify-content: center;
