--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -47,6 +47,7 @@
     background-color: rgb(38, 128, 38);
     width: 100%;
     height: 20px;
+    transition-duration: 0.5s;
 }
 
 .player-mana-bar {
@@ -60,6 +61,7 @@
     background-color: rgb(134, 37, 134);
     width: 100%;
     height: 20px;
+    transition-duration: 0.5s;
 }
 
 #player-right > .player-portrait {
