--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 40px;
+    margin-top: 10px;
 }
 
 .battle-screen-player-summary {
@@ -16,8 +17,10 @@
         font-size: 25px;
     }
     .battle-screen-player-summary {
-        font-size: 20px;
+        font-size: 19px;
         margin-left: 10px;
         margin-right: 10px;
+        margin-bottom: 0;
+        margin-top: 15px;
     }
 }
