--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -36,7 +36,7 @@
     height: 200px;
 }
 
-.player-hp-bar {
+.player-hp-bar, .player-mana-bar {
     background-color: gray;
     margin-top: 15px;
     width: 100%;
@@ -49,13 +49,6 @@
     height: 20px;
     transition-duration: 0.5s;
     color: black;
-}
-
-.player-mana-bar {
-    background-color: gray;
-    margin-top: 15px;
-    width: 100%;
-    height: 20px;
 }
 
 .player-mana-amount {
