--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -1,4 +1,14 @@
 
+#attack-selection-silhouette {
+    width: 100%;
+    height: 400px;
+}
+
+#defense-selection-silhouette {
+    width: 500px;
+    height: 500px;
+}
+
 #players-bar {
     display: flex;
     justify-content: space-between;
