Drawing both silhouettes

--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -1,12 +1,7 @@
 
-#attack-selection-silhouette {
+.body-selection {
     width: 100%;
     height: 400px;
-}
-
-#defense-selection-silhouette {
-    width: 500px;
-    height: 500px;
 }
 
 #players-bar {
