--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -4,6 +4,14 @@
     height: 400px;
 }
 
+.silhouette-part {
+    
+}
+
+.silhouette-part:hover {
+    background-color: white;
+}
+
 #players-bar {
     display: flex;
     justify-content: space-between;
