--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -120,7 +120,7 @@
     transition-duration: 0.1s;
 }
 
-.player-ability .selected {
+#battle-screen-selection-abilities-list .selected {
     background-color: gold !important;
 }
 
