--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -132,11 +132,11 @@
 }
 
 .silhouette-part {
-    
+    transition-duration: 1s;
 }
 
 .damaged {
-    transition: 0.5s;
+    transition-duration: 1s;
     filter: invert(78%) sepia(95%) saturate(1148%) hue-rotate(333deg) brightness(101%) contrast(89%);
 }
 
