--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -12,6 +12,12 @@
     margin-bottom: 20px;
 }
 
+@media (max-width: 600px) {
+    #player-silhouettes {
+        flex-direction: column;
+    }
+}
+
 @media(max-height: 700px) {
     #battle-screen-player {
         font-size: 25px;
