--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 html {
+    -webkit-appearance: none;
     -ms-touch-action: manipulation;
     touch-action: manipulation;
 }
@@ -6,7 +7,7 @@ html {
 body {
     background-color: black;
     font-family: 'Courier New', Courier, monospace;
-    color: rgb(42, 165, 42);
+    color: rgb(0, 255, 0);
     margin: auto;
     user-select: none; /* supported by Chrome and Opera */
    -webkit-user-select: none; /* Safari */
@@ -33,7 +34,7 @@ img {
     font-family: 'Courier New', Courier, monospace;
     display: block;
     text-transform: uppercase;
-    background-color: green;
+    background-color: rgb(0, 255, 0);
     border: none;
     transition-duration: 0.1s;
 }
