--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 40px;
-    margin-top: 10px;
+    padding-top: 10%;
 }
 
 .battle-screen-player-summary {
@@ -27,6 +27,6 @@
         margin-left: 10px;
         margin-right: 10px;
         margin-bottom: 0;
-        margin-top: 13px;
+        padding-top: 0;
     }
 }
