--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,10 @@ img {
     text-transform: uppercase;
     background-color: rgb(0, 255, 0);
     border: none;
-    transition-duration: 0.1s;
+    transition-duration: 0.1s;    
+    border-radius: 0;
+    -webkit-border-radius: 0; 
+    -webkit-appearance: none;
 }
 
 @media (hover: hover){ 
