Silhouettes on full size in summary; fixed hover effect on silhouettes

--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -13,7 +13,10 @@
 
 @media (max-width: 600px) {
     #player-silhouettes {
-        flex-direction: column;
+        /* flex-direction: column; */
+    }
+    .summary-silhouette {
+        stroke-width: 4;
     }
 }
 
