--- a/css/silhouette.css
+++ b/css/silhouette.css
@@ -1,14 +1,14 @@
 
 .silhouette-part {
-    stroke: white;
-    transition-duration: 0.2s;
+    stroke: green;
+    transition-duration: .3s;
 }
 
 #battle-screen-selections .silhouette-part:hover {
     cursor: pointer;
-    fill: white;
+    fill: green;
     cursor: pointer;
-    transition-duration: 0.2s;
+    transition-duration: .3s;
 }
 
 path {
