--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ img {
     height: 80px;
     max-width: 220px;
     width: 100%;
-    font-size: 25px;
+    font-size: 1.4rem;
     font-family: 'Courier New', Courier, monospace;
     display: block;
     text-transform: uppercase;
