Finished liquid styled fills for body parts.

--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -11,6 +11,11 @@
     margin-bottom: 10px;
 }
 
+/* #battle-screen-summary-player-svg rect {
+    stroke-width: 3px;
+    stroke: black;
+} */
+
 @media (max-width: 600px) {
     #player-silhouettes {
         /* flex-direction: column; */
