--- a/css/silhouette.css
+++ b/css/silhouette.css
@@ -36,6 +36,11 @@ path {
     transition-duration: 1s; 
 }
 
+.circle-bar-amount {
+    fill: black;
+    stroke: green;
+}
+
 .circle-bar-fill-view {
     transition: stroke-dashoffset 1s linear;
     stroke: green;
