--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -164,10 +164,16 @@
 }
 
 #battle-screen-error-message {
-    font-size: 20px;
-    margin-top: 20px;
+    font-size: 17px;
+    margin: auto;
+    width: 30%;
     color:orangered;
     text-align: center;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    margin: 0 0 0 -15%;
+    transition-duration: 0.3s;
 }
 
 @media (hover: hover){ 
