--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -126,7 +126,6 @@
 
 #battle-screen-player-selection {
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -134,6 +133,11 @@
 #player-selection {
     display: flex;
     justify-content: center;
+}
+
+.player-selection-title {
+    text-align: center;
+    margin: 10px 0;
 }
 
 .battle-screen-selection-body {
