Changed markup for player display

--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 40px;
+    margin-top: -5%;
 }
 
 .battle-screen-player-summary {
