--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -88,7 +88,7 @@
 
 #battle-screen-selections {
     font-size: 25px;
-    padding-top: 5%;
+    margin-top: -5%;
 }
 
 /* UNUSED 
@@ -205,21 +205,7 @@
     .player-stats {
         margin-left: 0;
         margin-right: 10px;
-    }
-    #player-left {
-        position: relative;
-        top: 0;
-        left: 0;
-        float: none;
-    }
-    
-    #player-right {
-        text-align: right;
-        position: absolute;
-        top: 0;
-        right: 0;
-        float: none;
-    }
+    }    
 }
 
 @media(max-width: 650px) {
@@ -233,16 +219,9 @@
     .player-bar-text {
         top: -20px;
     }
-    #player-right {
-        float: none;
-    }
 }
 
 @media(max-width: 525px) {
-    #players-bar { 
-        flex-direction: column;
-        align-items: center;
-    }
     #battle-screen-selections {
         margin-top: 30px;
     }
