--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -12,16 +12,8 @@
     max-width: 250px;
 }
 
-#player-left {
-    float: left;
-    position: relative;
-    top: 0;
-    left: 0;
-}
-
 #player-right {
     text-align: right;
-    float: right;
 }
 
 .player-name {
@@ -154,7 +146,7 @@
 
 .body-selection {
     display: block;
-    padding-top: 2%;
+    margin-top: 1%;
 }
 
 #player-silhouettes {
