--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -158,8 +158,7 @@
     display: flex;
     justify-content: center;
     position: absolute;
-    bottom: 0;
-    top: 75%;
+    bottom: 20px;
     left: 0;
     width: 100%;
 }
@@ -246,14 +245,5 @@
     }
     #battle-screen-selections {
         margin-top: 0;
-    }
-}
-
-@media (max-height: 600px) {
-    #battle-screen-selections .switch-button {
-        height: 40px;
-        margin: 5px 10px;
-        font-size: 1.2rem;
-        width: 110px;
     }
 }
