--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,12 @@ img {
         transition-duration: 0.3s;
     }
 }
+
+@media (max-height: 600px) {
+    .switch-button {
+        height: 40px;
+        margin: 5px 10px;
+        font-size: 1.2rem;
+        width: 110px;
+    }
+}
