--- a/css/versusScreenStyle.css
+++ b/css/versusScreenStyle.css
@@ -11,10 +11,15 @@
     margin-left: 5px;
 }
 
+#start-turn-button {
+    position: absolute;
+    bottom: 20px;
+}
+
 #versus-text {
     font-size: 50px;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 .versus-screen-player-display {
