--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -1,10 +1,18 @@
 
+#battle-screen {
+    display: flex;
+    min-height: 90vh;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 #players-bar {
     display: flex;
     justify-content: space-between;
-    margin: auto;
     width: 100%;
     font-size: 24px;
+    position: absolute;
+    pointer-events: none;
 }
 
 #player-left, #player-right {
@@ -80,6 +88,11 @@
 
 #battle-screen-selections {
     font-size: 25px;
+    justify-self: center;
+    align-self: center;
+    min-height: 90vh;
+    justify-content: center;
+    display: flex;
 }
 
 /* UNUSED 
@@ -119,8 +132,7 @@
     display: flex;
     align-items: center;
     justify-content: center;   
-    position: relative;
-    top: -180px;
+    justify-self: center;
 }
 
 #player-selection {
@@ -204,7 +216,7 @@
         margin-right: 10px;
     }    
     #battle-screen-player-selection {
-        top: -120px;
+        
     }
 }
 
@@ -224,7 +236,7 @@
         margin: 3px 0;
     }
     #battle-screen-player-selection {
-        top: -50px;
+        
     }
 }
 
