--- a/css/battleSummaryScreen.css
+++ b/css/battleSummaryScreen.css
@@ -4,7 +4,10 @@
     flex-direction: column;
     align-items: center;
     font-size: 40px;
-    margin-top: -5%;
+    justify-self: center;
+    align-self: center;
+    min-height: 90vh;
+    justify-content: center;
 }
 
 .battle-screen-player-summary {
