Fixed icon animations.

--- a/css/silhouette.css
+++ b/css/silhouette.css
@@ -12,7 +12,6 @@
 
 .silhouette-part-stroke {
     fill: none;
-    stroke: green;
     stroke-width: 3px;
 }
 
@@ -62,4 +61,20 @@ path {
 .no-opacity {
     transition: 0.5s;
     opacity: 0;
+}
+
+.attack-icon {
+    background: none;
+    transform-origin: center center;
+}
+
+.shield-icon-path {
+    fill: white;
+    /* fill-opacity: 0.75; */
+    transform: scale(2.5, 2.5);
+}
+
+.target-icon-path {
+    fill: red;
+    transform: scale(0.2, 0.2);
 }
