--- a/css/battleScreen.css
+++ b/css/battleScreen.css
@@ -183,7 +183,7 @@
     color:orangered;
     text-align: center;    
     position: absolute;
-    top: 25px;
+    top: 20px;
     left: 50%;
     margin: 0 0 0 -15%;
     transition-duration: 0.3s;
@@ -257,6 +257,9 @@
     }
     #battle-screen-player-selection {
         top: -10px;
+    }
+    #battle-screen-error-message {
+        top: -20px;
     }
 }
 
